--- a/PortalSocios/PortalSocios/Views/Home/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Index.cshtml
@@ -8,6 +8,15 @@
     <div class="jumbotron painel">
         <h1>Clube Desportivo Coxos da Bola</h1>
         <p>Bem-vindo ao Portal dos Sócios do CDCB.</p>
+        <p>Inscreve-te como sócio e beneficia das vantagens que o teu clube te proporciona, como ofertas e descontos. Além disso, passarás também a estar registado nesta plataforma online onde poderás:</p>
+        <div style="text-align:left;">
+            <p style="margin-left: 200px;">- Consultar e alterar os dados de sócio;</p>
+            <p style="margin-left: 200px;">- Consultar o estado de pagamento das quotas;</p>
+            <p style="margin-left: 200px;">- Retirar as referências multibanco para pagamento das quotas online.</p>
+        </div>
+        <!-- ref: https://thenounproject.com/term/stadium/221016/ -->
+        <img id="foto" class="img-center" src="~/Content/Imagens/adeptos.png" />
+        <div id="inscr"><h2>Inscreve-te já!</h2></div>
     </div>
 </body>
 </html>
