--- a/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
+++ b/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
@@ -36,6 +36,9 @@
                     @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
                 </div>
             </div>
+            @if (ViewBag.a != null) {
+            <div class="titulo col-md-12" style="color:forestgreen; font-weight:bold;">@ViewBag.a</div>
+            }
         </div>
         <div class="col-md-12" style="text-align:center; margin-top:20px;">
             <input type="submit" value="Alterar" class="btn btn-primary" style="font-size: 16px;" />
