--- a/PortalSocios/PortalSocios/Views/Shared/_LoginPartial.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_LoginPartial.cshtml
@@ -20,7 +20,7 @@
 }
 else {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Registar", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class="ligacoes" })</li>
+        <li>@Html.ActionLink("Inscrever", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class="ligacoes" })</li>
         <li>@Html.ActionLink("Entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class="ligacoes" })</li>
     </ul>
 }
