--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -27,7 +27,7 @@
                 <h4>Aluno n.º 15233 - Rodrigo Daniel Nunes Carrão</h4>
             </div>
             <div class="col-lg-12">
-                <img id="foto" class="img-circle img-responsive img-center" src="~/Content/Imagens/fotorc.jpg" />
+                <img id="foto" class="img-circle img-center" src="~/Content/Imagens/fotorc.jpg" />
                 <h3>Utilizadores</h3>
                 <p><span class="tipo">Role:</span> Administrador</p>
                 <p><span class="tipo">E-mail:</span> dalves@coxos.pt</p>
