--- a/PortalSocios/PortalSocios/Views/Erros/Indisponivel.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/Indisponivel.cshtml
@@ -3,17 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Serviço Indisponível! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <style>
-    </style>
-    <script>
-    </script>
 </head>
 <body>
     <div class="jumbotron painel">
         <h1>SERVIÇO INDISPONÍVEL!</h1>
         <p>O serviço encontra-se em construção e estará disponível brevemente.</p>
         <!-- ref: http://www.mapcentia.com/en/product/platform.htm -->
-        <img id="foto" class="img-center" src="~/Content/Imagens/construcao.png" />
+        <img class="img-center figuras" src="~/Content/Imagens/construcao.png" />
     </div>
 </body>
 </html>
