--- a/PortalSocios/PortalSocios/Views/Erros/NotFound.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/NotFound.cshtml
@@ -3,17 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Erro! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <style>
-    </style>
-    <script>
-    </script>
 </head>
 <body>
     <div class="jumbotron painel">
         <h1>ERRO 404!</h1>
         <p>A página não foi encontrada...</p>
         <!-- ref: https://rutgersonline.desk.com/customer/en/portal/articles/2635151-canvas-course-roles-and-permissions -->
-        <img id="foto" class="img-center" src="~/Content/Imagens/erro.png" />
+        <img class="img-center figuras" src="~/Content/Imagens/erro.png" />
     </div>
 </body>
 </html>
