--- a/PortalSocios/PortalSocios/Views/Erros/Restrito.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/Restrito.cshtml
@@ -3,17 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title>Acesso Restrito! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <style>
-    </style>
-    <script>
-    </script>
 </head>
 <body>
     <div class="jumbotron painel">
         <h1>Acesso Restrito!</h1>
         <p>Não possui privilégios para visualizar o conteúdo...</p>
         <!-- ref: https://commons.wikimedia.org/wiki/File:Forbidden_Symbol_Transparent.svg -->
-        <img id="foto" class="img-center" src="~/Content/Imagens/proibido.png" />
+        <img class="img-center figuras" src="~/Content/Imagens/proibido.png" />
     </div>    
 </body>
 </html>
