--- a/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Delete.cshtml
@@ -40,8 +40,8 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="col-lg-12 form-actions no-color" style="text-align:center; margin-top:20px;">
-            <input type="submit" value="Sim" class="btn btn-primary" style="font-size: 16px;" />
+        <div class="col-lg-12 form-actions no-color divBtnCentro">
+            <input type="submit" value="Sim" class="btn btn-primary" />
         </div>
     }
 </body>
