--- a/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
@@ -13,8 +13,8 @@
         <div class="row painel">
             @foreach (var item in Model) {
                 if (item.BeneficioID < 7) {
-                    <div class="col-lg-4 text-center leg">
-                        <img class="img-circle img-responsive img-center imagem" src="~/Content/Imagens/vantagem@(item.BeneficioID).png" />                      
+                    <div class="col-lg-4 text-center legendas">
+                        <img class="img-circle img-center imagens" src="~/Content/Imagens/vantagem@(item.BeneficioID).png" />                      
                         <h4>@Html.DisplayFor(modelItem => item.Descricao)</h4>
                     </div>
                 }
