--- a/PortalSocios/PortalSocios/Views/Pagamentos/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Edit.cshtml
@@ -99,8 +99,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12" style="text-align:center; margin-top:20px;">
-            <input type="submit" value="Guardar" class="btn btn-primary" style="font-size: 16px;" />
+        <div class="col-md-12 divBtnCentro">
+            <input type="submit" value="Guardar" class="btn btn-primary" />
         </div>
     }
     <script type="text/javascript">
