--- a/PortalSocios/PortalSocios/Views/RolesAdmin/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/RolesAdmin/Index.cshtml
@@ -11,13 +11,13 @@
     <div class="titulo"><h3>LISTA DE FUNÇÕES</h3></div>
 
     <!-- criar novo privilégio -->
-    <div class="col-md-12" style="text-align:center; margin-top: 20px;">
-        <input type="button" class="btn btn-primary" value="Criar Nova Função" onclick="location.href='@Url.Action("Create", "RolesAdmin")'" style="font-size: 16px;" />
+    <div class="col-md-12 divBtnCentro">
+        <input type="button" class="btn btn-primary" value="Criar Nova Função" onclick="location.href='@Url.Action("Create", "RolesAdmin")'" />
     </div>
     <hr />
 
-    <div style="text-align:center;">
-        <div style="display: inline-block;">
+    <div class="centrarTab">
+        <div class="displayTab">
             <!-- tabela de privilégios -->
             <table class="table">
                 <!-- cabeçalhos -->
