--- a/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
@@ -5,16 +5,12 @@
 <head>
     <meta charset="utf-8" />
     <title>Erro! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <style>
-    </style>
-    <script>
-    </script>
 </head>
 <body>
     <div class="jumbotron painel">
         <h1>ERRO!</h1>
         <p>Ocorreu um erro a processar a página...</p>
-        <img id="foto" class="img-center" src="~/Content/Imagens/erro.png" />
+        <img class="img-center figuras" src="~/Content/Imagens/erro.png" />
     </div>
 </body>
 </html>
