--- a/PortalSocios/PortalSocios/Views/Shared/Lockout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/Lockout.cshtml
@@ -1,10 +1,21 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
-@{
-    ViewBag.Title = "Locked Out";
-}
-
-<hgroup>
-    <h1 class="text-error">Locked out.</h1>
-    <h2 class="text-error">This account has been locked out, please try again later.</h2>
-</hgroup>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Conta Bloqueada | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <style>
+    </style>
+    <script>
+    </script>
+</head>
+<body>
+    <div class="jumbotron painel">
+        <h1>CONTA BLOQUEADA!</h1>
+        <p>Esta conta foi bloqueada...Por favor, tente mais tarde.</p>
+        <!-- ref: https://rutgersonline.desk.com/customer/en/portal/articles/2635151-canvas-course-roles-and-permissions -->
+        <img id="foto" class="img-center" src="~/Content/Imagens/erro.png" />
+    </div>
+</body>
+</html>
