--- a/PortalSocios/PortalSocios/Content/bootstrap.css
+++ b/PortalSocios/PortalSocios/Content/bootstrap.css
@@ -1725,8 +1725,8 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .form-control {
   display: block;
-  width: 100%;
   height: 34px;
+  width: 100%;
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.428571429;
@@ -2100,6 +2100,7 @@ fieldset[disabled] .btn-default.active {
   color: #ffffff;
   background-color: #428bca;
   border-color: #357ebd;
+  font-size: 16px;
 }
 
 .btn-primary:hover,
