--- a/PortalSocios/PortalSocios/Views/Account/Register.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-    <title> Registar | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <title> Inscrever | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <style>
 
     </style>
@@ -33,19 +33,19 @@
                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confirmar palavra-passe", @style = "width: 230px;" })      
             </div>
             <div class="col-md-12 form-inline">
-                @Html.EditorFor(m => m.Socio.Nome, new { htmlAttributes = new { @class = "form-control reg1", @maxlength = "50", @placeholder = "Nome" } })
-                @Html.EditorFor(m => m.Socio.BI, new { htmlAttributes = new { @class = "form-control reg1", @maxlength = "8", @placeholder = "BI/CC", @style = "width: 130px;" } })
-                @Html.EditorFor(m => m.Socio.NIF, new { htmlAttributes = new { @class = "form-control reg1", @maxlength = "9", @placeholder = "NIF", style = "width: 130px;" } })
-                @Html.EditorFor(m => m.Socio.DataNasc, new { htmlAttributes = new { @class = "form-control reg1", @placeholder = "Data de Nascimento", style = "width: 200px;" } })                
+                @Html.EditorFor(m => m.Socio.Nome, new { htmlAttributes = new { @class = "form-control margemTopo", @maxlength = "50", @placeholder = "Nome" } })
+                @Html.EditorFor(m => m.Socio.BI, new { htmlAttributes = new { @class = "form-control margemTopo", @maxlength = "8", @placeholder = "BI/CC", @style = "width: 120px;" } })
+                @Html.EditorFor(m => m.Socio.NIF, new { htmlAttributes = new { @class = "form-control margemTopo", @maxlength = "9", @placeholder = "NIF", @style = "width: 120px;" } })
+                @Html.EditorFor(m => m.Socio.DataNasc, new { htmlAttributes = new { @class = "form-control margemTopo", @placeholder = "Data de Nascimento", @style = "width: 200px;" } })                
             </div>
             <div class="col-md-12 form-inline">
-                @Html.DropDownList("CategoriaFK", null, "- Categoria -", htmlAttributes: new { @id = "cat", @class = "form-control reg1", @style = "width: 160px;" })
-                @Html.EditorFor(m => m.Socio.Telemovel, new { htmlAttributes = new { @class = "form-control reg1", @maxlength = "9", @placeholder = "Telemóvel", @style = "width: 100px;" } })              
-                @Html.EditorFor(m => m.Socio.Morada, new { htmlAttributes = new { @class = "form-control reg1", @maxlength = "80", @placeholder = "Morada" } })
-                @Html.EditorFor(m => m.Socio.CodPostal, new { htmlAttributes = new { @class = "form-control reg1", @maxlength = "50", @placeholder = "Código Postal", style = "width: 200px;" } })               
+                @Html.DropDownList("CategoriaFK", null, "- Categoria -", htmlAttributes: new { @id = "cat", @class = "form-control margemTopo", @style = "width: 130px;" })
+                @Html.EditorFor(m => m.Socio.Telemovel, new { htmlAttributes = new { @class = "form-control margemTopo", @maxlength = "9", @placeholder = "Telemóvel", @style = "width: 100px;" } })              
+                @Html.EditorFor(m => m.Socio.Morada, new { htmlAttributes = new { @class = "form-control margemTopo", @maxlength = "80", @placeholder = "Morada" } })
+                @Html.EditorFor(m => m.Socio.CodPostal, new { htmlAttributes = new { @class = "form-control margemTopo", @maxlength = "50", @placeholder = "Código Postal", @style = "width: 200px;" } })               
             </div>
             <div class="col-md-12">
-                <input type="file" name="foto" id="foto" class="reg2" />
+                <input type="file" name="foto" id="foto" class="margemTopo2" />
             </div>
             <div class="col-md-12">
                 @Html.ValidationSummary("")
