--- a/PortalSocios/PortalSocios/Views/Beneficios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Beneficios/Edit.cshtml
@@ -37,8 +37,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12" style="text-align:center; margin-top: 20px;">
-            <input type="submit" value="Guardar" class="btn btn-primary" style="font-size: 16px; margin-right: 10px;" />
+        <div class="col-md-12 divBtnCentro">
+            <input type="submit" value="Guardar" class="btn btn-primary" />
         </div>
     }
 </body>
