--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -27,19 +27,19 @@
                 <h4>Aluno n.º 15233 - Rodrigo Daniel Nunes Carrão</h4>
             </div>
             <div class="col-lg-12">
-                <img id="foto" class="img-circle img-center" src="~/Content/Imagens/fotorc.jpg" />
+                <img id="foto" class="img-circle img-center figuras" src="~/Content/Imagens/fotorc.jpg" />
                 <h3>Utilizadores</h3>
-                <p><span class="tipo">Role:</span> Administrador</p>
-                <p><span class="tipo">E-mail:</span> dalves@coxos.pt</p>
-                <p><span class="tipo">Palavra-chave:</span> 123Qwe#</p>
+                <p><span class="info">Role:</span> Administrador</p>
+                <p><span class="info">E-mail:</span> dalves@coxos.pt</p>
+                <p><span class="info">Palavra-chave:</span> 123Qwe#</p>
                 <br />
-                <p><span class="tipo">Role:</span> Funcionario</p>
-                <p><span class="tipo">E-mail:</span> aazevedo@coxos.pt</p>
-                <p><span class="tipo">Palavra-chave:</span> 456Qwe#</p>
+                <p><span class="info">Role:</span> Funcionario</p>
+                <p><span class="info">E-mail:</span> aazevedo@coxos.pt</p>
+                <p><span class="info">Palavra-chave:</span> 456Qwe#</p>
                 <br />
-                <p><span class="tipo">Role:</span> Socio</p>
-                <p><span class="tipo">E-mail:</span> smodesto@gmail.com</p>
-                <p><span class="tipo">Palavra-chave:</span> 789Qwe#</p>
+                <p><span class="info">Role:</span> Socio</p>
+                <p><span class="info">E-mail:</span> smodesto@gmail.com</p>
+                <p><span class="info">Palavra-chave:</span> 789Qwe#</p>
             </div>
         </div>
     </div>
