--- a/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
@@ -66,8 +66,8 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-12" style="text-align:center; margin-top:20px;">
-                <input type="submit" value="Criar" class="btn btn-primary" style="font-size: 16px;" />
+            <div class="col-md-12 divBtnCentro">
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </div>
     }
