--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -8,24 +8,24 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top ligacoes">
+    <nav class="navbar navbar-inverse navbar-fixed-top btnBarra">
         <div class="container">
             <div class="navbar-header">
-                @Html.ActionLink("Portal dos Sócios", "Index", "Home", null, new { @class = "navbar-brand ligacoes" })
+                @Html.ActionLink("Portal dos Sócios", "Index", "Home", null, new { @class = "navbar-brand btnBarra" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Sobre", "Sobre", "Home", null, new { @class = "ligacoes" })</li>
-                    <li>@Html.ActionLink("Quotas", "Quotas", "Home", null, new { @class = "ligacoes" })</li>
-                    <li>@Html.ActionLink("Vantagens", "Vantagens", "Home", null, new { @class = "ligacoes" })</li>                    
+                    <li>@Html.ActionLink("Sobre", "Sobre", "Home", null, new { @class = "btnBarra" })</li>
+                    <li>@Html.ActionLink("Quotas", "Quotas", "Home", null, new { @class = "btnBarra" })</li>
+                    <li>@Html.ActionLink("Vantagens", "Vantagens", "Home", null, new { @class = "btnBarra" })</li>                    
 
                     @if (User.IsInRole("Socio")) {
-                        <li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos", null, new { @class = "ligacoes" })</li>
+                        <li>@Html.ActionLink("Pagamentos", "Index", "Pagamentos", null, new { @class = "btnBarra" })</li>
                     }
 
                     @if (User.IsInRole("Administrador") || User.IsInRole("Funcionario")) {
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle ligacoes" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle btnBarra" data-toggle="dropdown">Gestão da BD<b class="caret"></b></a>
                             <ul class="dropdown-menu">
                                 <li><a href="~/Socios/Index">Sócios</a></li>
                                 <li><a href="~/Quotas/Index">Quotas</a></li>
