--- a/PortalSocios/PortalSocios/Views/Shared/_LoginPartial.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_LoginPartial.cshtml
@@ -6,7 +6,7 @@
         <ul class="nav navbar-nav navbar-right">
 
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle ligacoes" data-toggle="dropdown">Bem-vindo @User.Identity.GetUserName()!<b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle btnBarra" data-toggle="dropdown">Bem-vindo @User.Identity.GetUserName()!<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     @if (User.IsInRole("Socio")) {
                         <li><a href="~/Socios/Index">Ver/Alterar dados pessoais</a></li>
@@ -20,7 +20,7 @@
 }
 else {
     <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Inscrever", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class="ligacoes" })</li>
-        <li>@Html.ActionLink("Entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class="ligacoes" })</li>
+        <li>@Html.ActionLink("Inscrever", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink", @class= "btnBarra" })</li>
+        <li>@Html.ActionLink("Entrar", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class= "btnBarra" })</li>
     </ul>
 }
