--- a/PortalSocios/PortalSocios/Views/UsersAdmin/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/UsersAdmin/Edit.cshtml
@@ -17,7 +17,7 @@
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal panel2">
+        <div class="form-horizontal painel2">
             @Html.ValidationSummary(true, "")
             @Html.HiddenFor(model => model.Id)
 
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 @Html.Label("Funções", new { @class = "control-label col-md-4" })
-                <span class=" col-md-8">
+                <span class="col-md-8">
                     @foreach (var item in Model.RolesList) {
                         <input type="checkbox" name="SelectedRole" value="@item.Value" checked="@item.Selected" class="checkbox-inline" />
                         @Html.Label(item.Value, new { @class = "control-label" })
@@ -38,8 +38,8 @@
                 </span>
             </div>
         </div>
-        <div class="col-md-12" style="text-align:center; margin-top: 20px;">
-            <input type="submit" value="Guardar" class="btn btn-primary" style="font-size: 16px; margin-right: 10px;" />
+        <div class="col-md-12 divBtnCentro">
+            <input type="submit" value="Guardar" class="btn btn-primary" />
         </div>
     }
 </body>
