--- a/PortalSocios/PortalSocios/Views/Funcionarios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Edit.cshtml
@@ -43,13 +43,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-4" })
-                <div class="col-md-8">
-                    @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @maxlength = "50" } })
-                    @Html.ValidationMessageFor(model => model.Email, "")
-                </div>
-            </div>
+            @Html.HiddenFor(model => model.Email)
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Telemovel, htmlAttributes: new { @class = "control-label col-md-4" })
@@ -75,13 +69,8 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                @Html.LabelFor(model => model.DataEntrClube, htmlAttributes: new { @class = "control-label col-md-4" })
-                <div class="col-md-8">
-                    @Html.EditorFor(model => model.DataEntrClube, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DataEntrClube, "")
-                </div>
-            </div>
+            @Html.HiddenFor(model => model.DataEntrClube)
+
         </div>
         <div class="col-md-12 divBtnCentro">
             <input type="submit" value="Guardar" class="btn btn-primary" />
