--- a/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
             <div class="navbar-header">
                 @Html.ActionLink("Portal dos Sócios", "Index", "Home", null, new { @class = "navbar-brand btnBarra" })
             </div>
-            <div class="navbar-collapse collapse">
+            <div class="navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Sobre", "Sobre", "Home", null, new { @class = "btnBarra" })</li>
                     <li>@Html.ActionLink("Quotas", "Quotas", "Home", null, new { @class = "btnBarra" })</li>
